ports/ati: Updated to 8.35.5 and added kernel 2.6.20.3 patches. Also added kernel configuration lines to README file.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@48 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/ati/README
+++ b/ati/README
@@ -2,6 +2,28 @@
 README for ati 8.34.8
 
 
+*** NOTE for kernel ***
+
+Check you have the next config:
+
+Loadable Module Support --->
+ [*] Enable loadable module support
+ [*]   Module unloading 
+
+Processor type and features  --->
+ [*] MTRR (Memory Type Range Register) support
+
+Device Drivers --->
+ Character Devices ---> 
+  <M> /dev/agpgart (AGP Support)  
+  <M>   Your_AGP_Chipset_Here
+  < > Direct Rendering Manager (XFree86 4.1.0 and higher DRI support)
+ Graphics support --->
+  < >  Support for framebuffer devices
+
+Kernel Hacking --->
+  [ ] Kernel debugging
+
 
 *** NOTE for ati with udev ***
 
