--- a/virtualbox/README
+++ b/virtualbox/README
@@ -2,19 +2,18 @@ README for virtualbox 1.3.8
 
 REQUIREMENTS
 
-Kernel headers needed for build 'vboxdrv.ko' kernel module.
+  Kernel headers needed for build 'vboxdrv.ko' kernel module.
 
 PRE-INSTALL
 
+  Add a new group wich can use VirtualBox
+  # groupadd vboxusers (or run pre-install script)
+
 POST-INSTALL
 
-During installation 'vboxdrv.ko' has been installed to your modules directory
-and you can load it using modprobe vboxdrv. 
-Also make sure you give yourself read and write access to /dev/vboxdrv.
-Before run virtualbox you need to load the kernel module (vboxdrv.ko)
-
-PRECAUTION
-
-The only way to run virtualbox now is using the root user, but future releases
-of this port will try to fix this problem. (e.g: using sUID permissions on 
-binaries, or by adding some udev rules to /dev/vboxdrv )
+  Add your user to the vboxusers group
+  # usermod -G vboxusers <your_user> 
+  
+  During installation 'vboxdrv.ko' has been installed to your modules directory
+  and you can load it using modprobe vboxdrv (needed before run VirtualBox).
+  Also make sure you give yourself read and write access to /dev/vboxdrv.
