--- a/virtualbox/README
+++ b/virtualbox/README
@@ -17,3 +17,19 @@ POST-INSTALL
   During installation 'vboxdrv.ko' has been installed to your modules directory
   and you can load it using modprobe vboxdrv (needed before run VirtualBox).
   Also make sure you give yourself read and write access to /dev/vboxdrv.
+
+  Also is a good idea to fine tune and check your udev rules.
+  For getting some info from your system run udevinfo:
+
+  # udevinfo -a -p /sys/class/misc/vboxdrv
+
+  Udevinfo starts with the device specified by the devpath and then
+  walks up the chain of parent devices. It prints for every device
+  found, all possible attributes in the udev rules key format.
+  A rule to match, can be composed by the attributes of the device
+  and the attributes from one single parent device.
+
+    looking at device '/class/misc/vboxdrv':
+    KERNEL=="vboxdrv"
+    SUBSYSTEM=="misc"
+    SYSFS{dev}=="10:62"
