ports/virtualbox: Updated README file.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@84 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/virtualbox/README
+++ b/virtualbox/README
@@ -7,7 +7,7 @@ REQUIREMENTS
 PRE-INSTALL
 
   Add a new group wich can use VirtualBox
-  # groupadd vboxusers (or run pre-install script)
+  # groupadd vboxusers (or run 'postinstall' script)
 
 POST-INSTALL
 
