ports/virtualbox: Rejected daemon environment and migrated to user environment. Now virtualbox is running entirely as unprivileged user, and also after close virtualbox application, when the script exit, kills background processes.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@89 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/virtualbox/README
+++ b/virtualbox/README
@@ -6,19 +6,18 @@ REQUIREMENTS
 
 PRE-INSTALL
 
-  Add a new group wich can use VirtualBox
-  # groupadd vboxusers (or run 'postinstall' script)
-
 POST-INSTALL
 
-  Add your user to the vboxusers group
+  Run the post-install script in order to add a vboxusers group to your system.
+  After that, add your user to the vboxusers group:
   # usermod -G vboxusers <your_user> 
   
   During installation 'vboxdrv.ko' has been installed to your modules directory
   and you can load it using modprobe vboxdrv (needed before run VirtualBox).
   Also make sure you give yourself read and write access to /dev/vboxdrv.
+  For this, virtualbox port has their own udev rules.
 
-  Also is a good idea to fine tune and check your udev rules.
+  Also is a good idea to fine tune your udev rules as you want.
   For getting some info from your system run udevinfo:
   # udevinfo -a -p /sys/class/misc/vboxdrv
 
