ports/virtualbox: Added '-a' switch in the README file where usermod settings are applied.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@212 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/virtualbox/README
+++ b/virtualbox/README
@@ -10,7 +10,7 @@ POST-INSTALL
 
   Run the post-install script in order to add a vboxusers group to your system.
   After that, add your user to the vboxusers group:
-  # usermod -G vboxusers <your_user> 
+  # usermod -a -G vboxusers <your_user> 
   
   During installation 'vboxdrv.ko' has been installed to your modules directory
   and you can load it using modprobe vboxdrv (needed before run VirtualBox).
