ports/ati: Updated README file.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@273 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/ati/README
+++ b/ati/README
@@ -1,5 +1,5 @@
 
-README for ati 8.34.8
+README for ati 8.42.3
 
 
 *** NOTE for kernel ***
@@ -37,10 +37,14 @@ libraries and extensions like so:
 
         # gl-select ati
 
-Also to configure your X server you can execute ati configurator like this:
+Also to configure your X server you can execute ati configurator like so:
 
 	# aticonfig --initial --input=/etc/X11/xorg.conf
 
+And if you want, you can start the ati external events daemon at
+/etc/rc.d/atieventsd, like so:
+
+  # service atieventsd start
 
 POST-REMOVE
 
