ports/php4-eaccelerator: Updated 0.9.5.1 -> 0.9.5.2
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@347 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/php4-eaccelerator/README
+++ b/php4-eaccelerator/README
@@ -1,5 +1,5 @@
 
-README for php4-eaccelerator 0.9.5.1
+README for php4-eaccelerator 0.9.5.2
 
 
 POST-INSTALL
@@ -12,20 +12,23 @@ POST-INSTALL
 
   To install as Zend extension:
 
-    zend_extension="/usr/lib/php/extensions/eaccelerator.so"
-    eaccelerator.shm_size="16"
-    eaccelerator.cache_dir="/tmp/eaccelerator"
-    eaccelerator.enable="1"
-    eaccelerator.optimizer="1"
-    eaccelerator.check_mtime="1"
-    eaccelerator.debug="0"
-    eaccelerator.filter=""
-    eaccelerator.shm_max="0"
-    eaccelerator.shm_ttl="0"
-    eaccelerator.shm_prune_period="0"
-    eaccelerator.shm_only="0"
-    eaccelerator.compress="1"
-    eaccelerator.compress_level="9"
+    zend_extension = "/usr/lib/php/extensions/eaccelerator.so"
+    eaccelerator.shm_size = 0
+    eaccelerator.cache_dir = "/tmp/eaccelerator"
+    eaccelerator.enable = 1
+    eaccelerator.optimizer = 1
+    eaccelerator.check_mtime = 1
+    eaccelerator.debugi = 0
+    eaccelerator.filter = ""
+    eaccelerator.shm_max = 0
+    eaccelerator.shm_ttl = 3600
+    eaccelerator.shm_prune_period = 0
+    eaccelerator.shm_only = 0
+    eaccelerator.compress = 1
+    eaccelerator.compress_level = 9
+    eaccelerator.sessions = "shm_and_disk"
+    eaccelerator.content = "shm_and_disk"
+
 
   If you use a thread safe build of PHP you must use 
   "zend_extension_ts" instead of "zend_extension".
@@ -33,19 +36,21 @@ POST-INSTALL
   To install as PHP extension:
   
     extension="eaccelerator.so"
-    eaccelerator.shm_size="16"
-    eaccelerator.cache_dir="/tmp/eaccelerator"
-    eaccelerator.enable="1"
-    eaccelerator.optimizer="1"
-    eaccelerator.check_mtime="1"
-    eaccelerator.debug="0"
-    eaccelerator.filter=""
-    eaccelerator.shm_max="0"
-    eaccelerator.shm_ttl="0"
-    eaccelerator.shm_prune_period="0"
-    eaccelerator.shm_only="0"
-    eaccelerator.compress="1"
-    eaccelerator.compress_level="9"
+    eaccelerator.shm_size = 0
+    eaccelerator.cache_dir = "/tmp/eaccelerator"
+    eaccelerator.enable = 1
+    eaccelerator.optimizer = 1
+    eaccelerator.check_mtime = 1
+    eaccelerator.debugi = 0
+    eaccelerator.filter = ""
+    eaccelerator.shm_max = 0
+    eaccelerator.shm_ttl = 3600
+    eaccelerator.shm_prune_period = 0
+    eaccelerator.shm_only = 0
+    eaccelerator.compress = 1
+    eaccelerator.compress_level = 9
+    eaccelerator.sessions = "shm_and_disk"
+    eaccelerator.content = "shm_and_disk"
 
   
   
