ports/mldonkey: Added ml* utils.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@381 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/mldonkey/README
+++ b/mldonkey/README
@@ -7,7 +7,7 @@ PRE-INSTALL
 POST-INSTALL
 
   Run the post-install script in order to add a mlusers group to your system.
-  After that, add your user to the mlusers group:
+  After that, you should add your user to the mlusers group:
   # usermod -G mlusers <your_user> 
   
 PRECAUTIONS
