ports/sancho: New port.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@385 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/virtualbox/README
+++ b/virtualbox/README
@@ -32,4 +32,9 @@ POST-INSTALL
     SUBSYSTEM=="misc"
     SYSFS{dev}=="10:62"
 
-PRECAUTIONS
+PRECAUTION
+
+ If you have problems trying to update virtualbox (xalan-c not found...) use
+ this command to solve it:
+ # prt-get update -fr xerces-c xalan-c
+ and then rebuild virtualbox
