--- a/ati/README
+++ b/ati/README
@@ -1,10 +1,10 @@
 
-README for ati 8.42.3
+README for ati 8.443.1
 
 
 *** NOTE for kernel ***
 
-Check you have the next config:
+Check that you enabled the following config options:
 
 Loadable Module Support --->
  [*] Enable loadable module support
