ports/notification-daemon-xfce: Fixed README file.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@478 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/notification-daemon-xfce/README
+++ b/notification-daemon-xfce/README
@@ -15,4 +15,4 @@ USAGE
     $ notify-send "Test notification"
     
     For more information about using notify-send
-    $ notify-send help
+    $ notify-send --help
