--- a/monit/README
+++ b/monit/README
@@ -1,4 +1,6 @@
+
 README for monit
+
 
 POST-INSTALL
 
@@ -10,4 +12,6 @@ POST-INSTALL
   in monitrc and then edit your /etc/inittab as:
   
   # Run monit in standard run-levels
-  mo:2345:respawn:/usr/bin/monit -Ic /usr/etc/monitrc
+  mo:2345:respawn:/usr/bin/monit -I -v -c /usr/etc/monitrc -l /var/log/monit.log
+
+  See also monit(1) for more information.
