ports/monit: Synced with contrib port
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@693 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/monit/README
+++ b/monit/README
@@ -1,6 +1,4 @@
-
 README for monit
-
 
 POST-INSTALL
 
@@ -12,6 +10,4 @@ POST-INSTALL
   in monitrc and then edit your /etc/inittab as:
   
   # Run monit in standard run-levels
-  mo:2345:respawn:/usr/bin/monit -I -c /usr/etc/monitrc
-
-  See also monit(1) for more information.
+  mo:2345:respawn:/usr/bin/monit -Ic /usr/etc/monitrc
