ports/sancho: Added 'requeriments' section to README file
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@799 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/sancho/README
+++ b/sancho/README
@@ -1,9 +1,17 @@
-README for sancho 0.9.4-58
+README for sancho
 
+
+REQUERIMENTS
+
+  Download sancho-$version-linux-gtk.sh manually from
+  http://sancho-gui.sourceforge.net/download.phtml
+
+
+NOTES
   
- Sancho its a graphical user interface for p2p cores.
- Currently only supports mldonkey gui protocol, which can access trough
- donkey, overnet, fasttrack, bittorrent and gnutella networks.
+  Sancho its a graphical user interface for p2p cores.
+  Currently only supports mldonkey gui protocol, which can access trough
+  donkey, overnet, fasttrack, bittorrent and gnutella networks.
 
- Please, read the FAQ for more information:
- http://sancho-gui.sourceforge.net/faq.phtml
+  Please, read the FAQ for more information:
+  http://sancho-gui.sourceforge.net/faq.phtml
