--- a/xfce4-radio-plugin/README
+++ b/xfce4-radio-plugin/README
@@ -1,4 +1,4 @@
 
-README for xfce4-radio-plugin 0.2.1
+README for xfce4-radio-plugin
 
 To run it, all you need is the Xfce panel and a properly configured V4l radio device.
