ports/dyndnsup: Cleaned up. Bumped release 2.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@879 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/dyndnsup/README
+++ b/dyndnsup/README
@@ -4,10 +4,11 @@ README for dyndnsup
 
 POST-INSTALLATION
 
-    Edit the config file (dyndnsup.conf) and setup to your needs
+    Copy the sample config file and edit to your needs:
+    $ sudo cp /usr/etc/dydndnsup/dyndnsup.conf.sample \
+      /usr/etc/dyndnsup/yourdomain.conf
+    $ sudo $EDITOR /usr/etc/dyndnsup/yourdomain.conf
 
-    Add a crontab line for doing auto-updates every 15 days
-
+    Add a crontab line for doing auto-updates every 15 days:
     $ sudo crontab -e
-
-    00 00 1/16 * * /usr/bin/dyndnsup 2>&1 >/var/log/dyndnsup.log
+    00 00 1/16 * * /usr/bin/dyndnsup -c /usr/etc/yourdomain.conf
