ports/bluej-es: updated to 2.5.3
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@1095 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/bluej-es/README
+++ b/bluej-es/README
@@ -1,4 +1,4 @@
 POST-INSTALL:
 
-                * Edit the file:  /usr/lib/bluej/lib/bluej.defs 
-		and set 'bluej.language' to spanish like: bluej.language=spanish
+  Edit the file:  /usr/lib/bluej/lib/bluej.defs
+  and set 'bluej.language' to spanish like: bluej.language=spanish
